--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,6 +5,11 @@ permalink: /teaching/
 author_profile: true
 ---
 
-<h2>Teaching Assistant For Stochastic Processes</h2>  
+<h4>Teaching Assistant For Stochastic Processes</h4>  
+
+———— February 2023 - July 2023， University of Science and Technology of China
+
+Served as teaching assistant for stochastic process course (Grades for this course this semester: 10/10).
+
 
 
