--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,12 +10,14 @@ author_profile: true
 ———— February 2023 - July 2023， University of Science and Technology of China
 
 <br>
-
-**Introduction:** Compared to the mathematics department's random processes, the proof of theorem properties is more based on elementary probability theory methods, rather than on measure theory and other knowledge. This book first takes us back to review elementary probability theory, designs some basic probability models, such as gamblers, voting, hat-picking, etc., mainly to allow students to grasp the basic probability ideas and better connect to the subsequent random process theory. The second chapter discusses the Poisson process, followed by discrete Markov chains, traversal principles, random walks, and Brownian motion. The teaching format is conducted through a combination of PPT and chalkboard writing.
 <br>
-**Course suggestions:** During the lecture, the teacher will have many unique insights, and after listening, one will feel as if they've had an enlightening realization. Pay attention to understanding, don’t memorize by rote, and train more to develop intuitive intuition.
+<b>Introduction:</b> Compared to the mathematics department's random processes, the proof of theorem properties is more based on elementary probability theory methods, rather than on measure theory and other knowledge. This book first takes us back to review elementary probability theory, designs some basic probability models, such as gamblers, voting, hat-picking, etc., mainly to allow students to grasp the basic probability ideas and better connect to the subsequent random process theory. The second chapter discusses the Poisson process, followed by discrete Markov chains, traversal principles, random walks, and Brownian motion. The teaching format is conducted through a combination of PPT and chalkboard writing.
 <br>
-**Enter the course evaluation community here: [Stochastic Processes](https://icourse.club/search/?q=%E9%9A%8F%E6%9C%BA%E8%BF%87%E7%A8%8BB)**
+<br>
+<b>Course suggestions:</b> During the lecture, the teacher will have many unique insights, and after listening, one will feel as if they've had an enlightening realization. Pay attention to understanding, don’t memorize by rote, and train more to develop intuitive intuition.
+<br>
+<br>
+<b>Enter the course evaluation community here: [Stochastic Processes](https://icourse.club/search/?q=%E9%9A%8F%E6%9C%BA%E8%BF%87%E7%A8%8BB)</b>
 
 
 
